--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <hr>
     <h1>Pongsatorn Sudsom</h1>
     <h2>Full-Stack Developer</h2>
-    <img src="../BWTF.jpg" alt="I" width="300" height="300">
+    <img src="BWTF.jpg" alt="I" width="300" height="300">
     <p>Energetic web Developer with certificated from Codecamp Thailand(#16).Codecamp is one of the best Developer's
         bootcamp in Thailand.end(React), back-end(Node &#38; Express)and Database(MySQL). </p>
     <h2>Personal Info</h2>
