--- a/work.html
+++ b/work.html
@@ -24,7 +24,7 @@
     <a href="contact.html">Contact Me</a>
     <hr>
     <h1>Work Experiennce</h1>
-    <img src="../work.gif" alt="work">
+    <img src="work.gif" alt="work">
     <table>
         <tr>
             <td>Year</td>
