--- a/education.html
+++ b/education.html
@@ -23,7 +23,7 @@
     <a href="contact.html">Contact Me</a>
     <hr>
     <h1>Education</h1>
-    <img src="../education.jpg" alt="edu" width="300" height="300">
+    <img src="Education.jpg" alt="edu" width="300" height="300">
     <table>
         <tr>
             <th colspan="2">Year</th>
